# type-first-discriminator

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
composite_discriminator/: __init__.py  composite_discriminator.py
tests/: test_import.py  test_type_first_discriminator.py
type_first_discriminator/: __init__.py  type_first_discriminator.py
